--- a/games/pygame/pygame.html
+++ b/games/pygame/pygame.html
@@ -6,8 +6,8 @@
   -->
 <html>
 <head>
-  <title>Phantom Inc |'' | - [Phangame] </title>
-  <link rel="stylesheet" href="css/phangame.css" />
+  <title>Phantom Inc |'' | - [Pygame] </title>
+  <link rel="stylesheet" href="css/pygame.css" />
   <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
   <!-- Fontawesome API code goes here :D -->
   <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
@@ -16,15 +16,16 @@
     <!-- Mobile Site Fix BB -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
       <meta name="description" content="Phantom Inc Official Website for IT Support, Photorgraphy and More!">
+ 
 <!-- GAME SCRIPTS-->
-<script src="data/phangame.js"></script>
+<script src="data/pygame.js"></script>
 <!-- Start Visual-->
 <center><img src="images/phantom-icon.png" class="logo" height="150" width="auto" alt="Phantom Inc Logo" /></center>
   </head>
 
   <body>
 <div class="main">
-    <canvas id="phangame" height="800" width="500"></canvas>
+    <canvas id="pygame" height="800" width="500"></canvas>
     <div class="navigation">
       <!-- Force all links to use HTTPS incase navigation to here was insecure -->
       <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fa-solid fa-house-chimney"></i></button></a>
