--- a/downloads.html
+++ b/downloads.html
@@ -75,62 +75,57 @@
 
 <!-- PRINT POST -->
     <button class="printacc"> Square Planter </button>
-    <div class="printpanel"><p>
+    <div class="printpanel"><p><img src="images/3d/squareplanter01.png" width="auto" height="80" style="float:right;"/> <br>
       First Planter utiilizing all space on the Prusa Mini+ <br>
       Infill: 20% <br>
-      Filament: PLA or PETG<br>
-      <img src="images/3d/squareplanter01.png" width="auto" height="100" /><br>
+      Filament: PLA or PETG <br>
       <a href="https://www.tinkercad.com/things/3jETiXglkNr" target="_blank"><button class="menu2">Tinkercad </button></a>
     </p>
     </div>
 <!-- PRINT POST -->
     <button class="printacc"> Square Planter Plate </button>
-    <div class="printpanel"><p> 
+    <div class="printpanel"><p> <img src="images/3d/squareplanterplate01.png" width="auto" height="80" style="float:right;"/> <br>
       The matching planter plate <br>
       Infill: 20% <br>
       Filament: PLA or PETG <br>
-      <img src="images/3d/squareplanterplate01.png" width="auto" height="100" /><br>
       <a href="https://www.tinkercad.com/things/4Yfz68wsNAO" target="_blank"><button class="menu2"> Tinkercad </button></a>
     </p>
     </div>
 <!-- PRINT POST -->
     <button class="printacc"> Poly Planter Plate </button>
-        <div class="printpanel"><p> Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599" target="_blank">Large Low Poly Planter</a><br>
+        <div class="printpanel"><p> <img src="images/3d/planterplate01.png" width="auto" height="80" style="float:right;"/> <br>
+        Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599" target="_blank">Large Low Poly Planter</a> <br>
          Infill: 15% <br>
          Filament: PLA or PETG <br>
-          <img src="images/3d/planterplate01.png" width="auto" height="100" /><br>
           <a href="https://www.tinkercad.com/things/fcL6tPLiee6" target="_blank"><button class="menu2"> Tinkercad </button></a> 
           <a href="" target="_blank"><button class="menu2"> Printables </button></a>
           </p>
         </div>
 <!-- PRINT POST -->
     <button class="printacc"> Phantom Tray </button>
-      <div class="printpanel"><p>
-         A perfect tray for any of your rolling needs  <br>
+      <div class="printpanel"><p><img src="images/3d/phantomtray05.png" width="auto" height="80" style="float:right;"/> <br>
+         A perfect tray for any of your rolling needs <br>
          Infill: 20% <br>
          Filament: PLA or PETG <br>
-          <img src="images/3d/phantomtray05.png" width="auto" height="100" /><br>
           <a href="https://www.tinkercad.com/things/hEwt0zrH5e2?sharecode=me5C7OSpl8fiOWJcsioQkAgVCVWJcLUkcCsdwUAZyfg" target="_blank"><button class="menu2"> Tinkercad </button></a>
           </p>
         </div>
 <!-- PRINT POST -->
     <button class="printacc"> 2 Hole Strap </button>
-        <div class="printpanel"><p>
+        <div class="printpanel"><p><img src="images/3d/2holestrap02.png" width="auto" height="80" style="float:right;"/> <br>
          2 Hole strap that can be used for anything. <br>
          <i>Example: mount cat5/6 cable to joists.</i> <br>
          Infill: 20% <br>
          Filament: PETG (for strength) <br>
-          <img src="images/3d/2holestrap02.png" width="auto" height="100" /><br>
           <a href="https://www.tinkercad.com/things/ctzZ5jHyi3k?sharecode=0AirPsUoy9kqagTPPQmn67KOQU0cTkFNJ1Cd6ZcDGGo" target="_blank"><button class="menu2"> Tinkercad </button></a>
           </p>
         </div>
 <!-- PRINT POST -->
     <button class="printacc"> Multi Hook Door Hanger </button>
-    <div class="printpanel"><p>
+    <div class="printpanel"><p> <img src="images/3d/multihookdoorhanger02.png" width="auto" height="80" style="float:right;"/> <br>
          Over the door hook that allows multiple hanger items <br>
          Infill: 20% <br>
          Filament: PETG (for strength) <br>
-    <img src="images/3d/multihookdoorhanger02.png" width="auto" height="100" /><br>
     <a href="https://www.tinkercad.com/things/gsALLvtj8O6?sharecode=36PXpdynp9L3FFw1DxskvqLTdlGc_YmJhLhbvFw8oWg" target="_blank"><button class="menu2"> Tinkercad </button></a>
     </p>
     </div>
