format changes, fixed README, added 3D files

--- a/downloads.html
+++ b/downloads.html
@@ -74,6 +74,24 @@
 <h2> 3D Print Files <i class="fas fa-cubes"></i> </h2>
 
 <!-- PRINT POST -->
+<button class="printacc"> Round Bowl </button>
+<div class="printpanel"><p><img src="images/3d/roundbowl02.png" width="auto" height="80" style="float:right;"/> <br>
+  Perfect little bowl for the work desk <br>
+  Infill: 15% <br>
+  Filament: PLA or PETG <br>
+  <a href="https://www.tinkercad.com/things/aifoFhym6Qu-roundbowl-jdv02-phantom" target="_blank"><button class="menu2">Tinkercad </button></a>
+</p>
+</div>
+<!-- PRINT POST -->
+<button class="printacc"> Sharp Bowl </button>
+<div class="printpanel"><p><img src="images/3d/sharpbowl01.png" width="auto" height="80" style="float:right;"/> <br>
+  A sharper bowl for sorting that is also stack-able <br>
+  Infill: 15% <br>
+  Filament: PLA or PETG <br>
+  <a href="https://www.tinkercad.com/things/jGrvozQGV4A-sharp-bowl-jdv01" target="_blank"><button class="menu2">Tinkercad </button></a>
+</p>
+</div>
+<!-- PRINT POST -->
     <button class="printacc"> Square Planter </button>
     <div class="printpanel"><p><img src="images/3d/squareplanter01.png" width="auto" height="80" style="float:right;"/> <br>
       First Planter utiilizing all space on the Prusa Mini+ <br>
