added section to downloads page, fixed link

--- a/downloads.html
+++ b/downloads.html
@@ -72,7 +72,19 @@
 <!-- #D Print Files Section -->
 <br>
 <h2> 3D Print Files <i class="fas fa-cubes"></i> </h2>
-
+ <h3>Final</h3> 
+<!-- PRINT POST -->
+<button class="printacc">Low Poly Planter Plate </button>
+<div class="printpanel"><p> <img src="images/3d/planterplate01.png" width="auto" height="80" style="float:right;"/> <br>
+Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599" target="_blank">Large Low Poly Planter</a> <br>
+ Infill: 15% <br>
+ Filament: PLA or PETG <br>
+  <a href="https://www.tinkercad.com/things/fcL6tPLiee6" target="_blank"><button class="menu2"> Tinkercad </button></a> 
+  <a href="https://www.printables.com/model/505608-large-low-poly-planter-plate" target="_blank"><button class="menu2"> Printables </button></a>
+  </p>
+</div>
+<br>
+<h3>Beta</h3>
 <!-- PRINT POST -->
 <button class="printacc"> Round Bowl </button>
 <div class="printpanel"><p><img src="images/3d/roundbowl02.png" width="auto" height="80" style="float:right;"/> <br>
@@ -110,16 +122,6 @@
     </p>
     </div>
 <!-- PRINT POST -->
-    <button class="printacc"> Poly Planter Plate </button>
-        <div class="printpanel"><p> <img src="images/3d/planterplate01.png" width="auto" height="80" style="float:right;"/> <br>
-        Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599" target="_blank">Large Low Poly Planter</a> <br>
-         Infill: 15% <br>
-         Filament: PLA or PETG <br>
-          <a href="https://www.tinkercad.com/things/fcL6tPLiee6" target="_blank"><button class="menu2"> Tinkercad </button></a> 
-          <a href="" target="_blank"><button class="menu2"> Printables </button></a>
-          </p>
-        </div>
-<!-- PRINT POST -->
     <button class="printacc"> Phantom Tray </button>
       <div class="printpanel"><p><img src="images/3d/phantomtray05.png" width="auto" height="80" style="float:right;"/> <br>
          A perfect tray for any of your rolling needs <br>
@@ -147,7 +149,6 @@
     <a href="https://www.tinkercad.com/things/gsALLvtj8O6?sharecode=36PXpdynp9L3FFw1DxskvqLTdlGc_YmJhLhbvFw8oWg" target="_blank"><button class="menu2"> Tinkercad </button></a>
     </p>
     </div>
-
 <!-- Utilities Table Section -->
   <br>
   <h2>Utilities <i class="fas fa-box-open"></i></h2>
