updated homepage, buttons, shop, css added product

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <p>
      <h2 style="border: 1px solid #8bc34a; width:150px;">Update 6</h2>
     <ul>
-      <li> </li>
-      <li> </li>
-      <li> </li>
-      <li> </li>
-      &gt; &gt; posted October 2021 &lt; &lt;
+      <li> - Homepage Redesign</li>
+      <li> - Updated downloads page </li>
+      <li> - overall formatting improved</li>
+      <li> - menu button redesign</li>
+      &gt; &gt; posted Feruary 2024 &lt; &lt;
     </ul>
 </p>
 <br>
