--- a/updates.html
+++ b/updates.html
@@ -43,6 +43,14 @@
    <h5>All Updates</h5>
   </p>
   <p>All updates posted are focused on major additions or changes, for <u>all</u> changes follow along on <a href="https://github.com/jeremysmai/phantominc" target="_blank">Github</a></p>
+  <h2>Update 6</h2>
+  <ul>
+    <li> - Homepage Redesign</li>
+    <li> - Updated downloads page </li>
+    <li> - overall formatting improved</li>
+    <li> - menu button redesign</li>
+    &gt; &gt; posted Feruary 2024 &lt; &lt;
+  </ul>
   <p>
     <h2>Update 5</h2>
     <ul>
