--- a/shop.html
+++ b/shop.html
@@ -47,37 +47,45 @@
     <p><h4 style="text-shadow: 2px 2px 4px #000000; color: orange; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4>
     </p>
   </br>
+  <p><div class="featuredproduct"><h2><u> [ Featured Product ] </u></h2><br>
+      <img src="images/3d/KeyHooks[JD]v02.png" height="150px" width="auto" />
+      <p><h2>Key Hooks (Wall Mounted)</h2></p>
+      <p class="price">$5</p>
+      <p><h5>Where are my keys?!<br>Hang them up! Here's a simple solution a 4 Hook key hanger, wall mount ready for a typical wood or drywall screw. (you could also just slap heavy duty double sided tape on the back and mount anywhere)</h5></p>
+      <p><a href="shop/product3.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
+  </div></p>
     <!-- Shop Time -->
       <div class="product"><img src="images/3d/squareplanter01.png" height="150px" width="auto" />
-        <h2> JD's Square Planter <h2 style="color:green">(Multicolor)</h2>
+        <h3> JD's Square Planter <h3 style="color:green">(Multicolor)</h3>
         <p class="price">$20</p>
         <p><h5>My first official print! Its a planter! </h5><h4>Printed with PETG</h4></p>
         <p><h5>Colors In Stock:<h5 style="color:black">Black</h5><h5 style="color:gray">Gray</h5><h5 style="color:white">White</h5></h5></p>
         <!--Put Paypal Button Here! --><p><a href="shop/product0.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
       </div>
       <div class="product"><img src="images/3d/squareplanterplate01.png" height="150" width="auto"/>
-        <h2> JD's Square Planter Plate<h2 style="color:green">(Multicolor)</h2>
+        <h3> JD's Square Planter Plate<h3 style="color:green">(Multicolor)</h3>
         <p class="price">$10</p>
         <p><h5>Its a planter plate! Goes along with the Planter print </h5><h4>Printed with PETG</h4></p>
         <p><h5>Colors In Stock:<h5 style="color:black">Black</h5><h5 style="color:gray">Gray</h5><h5 style="color:white">White</h5></h5></p>
         <!--Put Paypal Button Here! --><p><a href="shop/product1.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
       </div>
       <div class="product"><img src="images/3d/iphone12promax.png" height="150px" width="auto" />
-        <h2>iPhone 12 Max Case </br> (Multicolor)</h2>
+        <h3>iPhone 12 Max Case </br> (Multicolor)</h3>
         <p class="price">$15</p>
         <p><h5>iPhone 12 Pro Max rubber case </h5><h4>Printed with Overture TPU (95A) </br>or</br> SainSmart TPU (92A) filament.</h4></p>
-        <p><h5 style="color:orange">Orange</h5><h5 style="text-shadow: 2px 2px 4px #000000;">Clear-ish</h5><h5 style="color:green;">Green</h5><h5 style="color:blue;">Teal</h5><h5 style="color:hotpink;">Pink</h5><h5 style="color:pink;">Pastel Pink</h5></p>
+        <p><h5 style="color:red">Limited Quanities Available!</h5></p>
+        <p><h5 style="color:orange">Orange</h5><h5 style="text-shadow: 2px 2px 4px #000000;">Clear-ish</h5><h5 style="color:green;">Green</h5></p>
         <!--Put Paypal Button Here! --><p><a href="shop/product2.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
       </div>
       <div class="product"><img src="images/phantom_sticker.png" height="150" width="150"/>
-        <h2>Phantom Inc Stickers </br></h2>
+        <h3>Phantom Inc Stickers </br></h3>
         <p class="price">10 for $9</p>
         <p><h5>Free Shipping </h5><h4>Made and Shipped by Sticker Mule </br></h4></p>
         <p><h5 style="color:white"> * Regular</h5></p>
         <!--Put Paypal Button Here! --><p><a href="https://www.stickermule.com/u/jeremysmai/item/11427837"><button class="productbtn"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
       </div>
       <div class="product"><img src="images/phantom_sticker_holo.png" height="150" width="150"/>
-        <h2>Phantom Inc Stickers </br></h2>
+        <h3>Phantom Inc Stickers </br></h3>
         <p class="price">10 for $9</p>
         <p><h5>Free Shipping </h5><h4>Made and Shipped by Sticker Mule </br></h4></p>
         <p><h5 style="text-shadow: 2px 2px 4px #000000;">* Holographic</h5></p>
