massive overhaul to shop and products page, index updated too

--- a/downloads.html
+++ b/downloads.html
@@ -40,7 +40,6 @@
     <div class="main">
     <!-- Start of Downloads Section -->
   <h1><u>Downloads</u></h1>
-  <h4>files are zipped for convienece</h4><br>
  <p>
    <h4> Recent Updates </h4>
      <ul>
@@ -49,26 +48,6 @@
     &gt; &gt; updated February 2024 &lt; &lt;
     </ul>
  </p>
-<!-- Games Table Section  -->
-  <br>
-<h2>Games <i class="fas fa-gamepad"></i></h2>
-  <table>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>OS/Requirements</th>
-    </tr>
-    <tr>
-      <td> TBD </td>
-      <td> TBD </td>
-      <td><i class="fab fa-linux"></i> (Linux)</td>
-    </tr>
-    <tr>
-      <td>Coming Soon</td>
-      <td>Quick Game Jam based in Pygame? We'll See...</td>
-      <td><i class="fab fa-raspberry-pi"></i> Raspberry Pi</td>
-    </tr>
-  </table>
 <!-- #D Print Files Section -->
 <br>
 <h2> 3D Print Files <i class="fas fa-cubes"></i> </h2>
@@ -76,7 +55,7 @@
 <h3>Final</h3>
  <!-- PRINT POST -->
 <button class="printacc">Key Hooks (Wall Mounted) </button>
-<div class="printpanel"><p> <img src="images/3d/KeyHooks[JD]v02.png" width="auto" height="80" style="float:right;"/> <br>
+<div class="printpanel"><p> <img src="images/3d/KeyHooks[JD]v02.png" width="auto" height="150" style="float:right;"/> <br>
 Simple screw mounted key hooks (4) for the household <br>or whatever you want.<br>
  Infill: 15% <br>
  Filament: PETG (Recommended) or PLA <br>
@@ -86,8 +65,8 @@ Simple screw mounted key hooks (4) for the household <br>or whatever you want.<b
 </div> 
 <!-- PRINT POST -->
 <button class="printacc">Low Poly Planter Plate </button>
-<div class="printpanel"><p> <img src="images/3d/planterplate01.png" width="auto" height="80" style="float:right;"/> <br>
-Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599" target="_blank">Large Low Poly Planter</a> <br>
+<div class="printpanel"><p> <img src="images/3d/planterplate01.png" width="auto" height="150" style="float:right;"/> <br>
+Planter Plate I created <br>for use with <a href="https://www.prusaprinters.org/prints/35599" target="_blank">Large Low Poly Planter</a> <br>
  Infill: 15% <br>
  Filament: PLA or PETG <br>
   <a href="https://www.printables.com/model/505608-large-low-poly-planter-plate" target="_blank"><button class="menu2"> Printables </button></a>
@@ -98,7 +77,7 @@ Planter Plate I created for use with <a href="https://www.prusaprinters.org/prin
 <h3>Beta</h3>
 <!-- PRINT POST -->
 <button class="printacc"> Round Bowl </button>
-<div class="printpanel"><p><img src="images/3d/roundbowl02.png" width="auto" height="80" style="float:right;"/> <br>
+<div class="printpanel"><p><img src="images/3d/roundbowl02.png" width="auto" height="150" style="float:right;"/> <br>
   Perfect little bowl for the work desk <br>
   Infill: 15% <br>
   Filament: PLA or PETG <br>
@@ -107,8 +86,8 @@ Planter Plate I created for use with <a href="https://www.prusaprinters.org/prin
 </div>
 <!-- PRINT POST -->
 <button class="printacc"> Sharp Bowl </button>
-<div class="printpanel"><p><img src="images/3d/sharpbowl01.png" width="auto" height="80" style="float:right;"/> <br>
-  A sharper bowl for sorting that is also stack-able <br>
+<div class="printpanel"><p><img src="images/3d/sharpbowl01.png" width="auto" height="150" style="float:right;"/> <br>
+  A sharper bowl for sorting<br> its also stack-able <br>
   Infill: 15% <br>
   Filament: PLA or PETG <br>
   <a href="https://www.tinkercad.com/things/jGrvozQGV4A-sharp-bowl-jdv01" target="_blank"><button class="menu2">Tinkercad </button></a>
@@ -116,7 +95,7 @@ Planter Plate I created for use with <a href="https://www.prusaprinters.org/prin
 </div>
 <!-- PRINT POST -->
     <button class="printacc"> Square Planter </button>
-    <div class="printpanel"><p><img src="images/3d/squareplanter01.png" width="auto" height="80" style="float:right;"/> <br>
+    <div class="printpanel"><p><img src="images/3d/squareplanter01.png" width="auto" height="150" style="float:right;"/> <br>
       First Planter utiilizing all space on the Prusa Mini+ <br>
       Infill: 20% <br>
       Filament: PLA or PETG <br>
@@ -125,7 +104,7 @@ Planter Plate I created for use with <a href="https://www.prusaprinters.org/prin
     </div>
 <!-- PRINT POST -->
     <button class="printacc"> Square Planter Plate </button>
-    <div class="printpanel"><p> <img src="images/3d/squareplanterplate01.png" width="auto" height="80" style="float:right;"/> <br>
+    <div class="printpanel"><p> <img src="images/3d/squareplanterplate01.png" width="auto" height="150" style="float:right;"/> <br>
       The matching planter plate <br>
       Infill: 20% <br>
       Filament: PLA or PETG <br>
@@ -134,7 +113,7 @@ Planter Plate I created for use with <a href="https://www.prusaprinters.org/prin
     </div>
 <!-- PRINT POST -->
     <button class="printacc"> Phantom Tray </button>
-      <div class="printpanel"><p><img src="images/3d/phantomtray05.png" width="auto" height="80" style="float:right;"/> <br>
+      <div class="printpanel"><p><img src="images/3d/phantomtray05.png" width="auto" height="150" style="float:right;"/> <br>
          A perfect tray for any of your rolling needs <br>
          Infill: 20% <br>
          Filament: PLA or PETG <br>
@@ -143,7 +122,7 @@ Planter Plate I created for use with <a href="https://www.prusaprinters.org/prin
         </div>
 <!-- PRINT POST -->
     <button class="printacc"> 2 Hole Strap </button>
-        <div class="printpanel"><p><img src="images/3d/2holestrap02.png" width="auto" height="80" style="float:right;"/> <br>
+        <div class="printpanel"><p><img src="images/3d/2holestrap02.png" width="auto" height="150" style="float:right;"/> <br>
          2 Hole strap that can be used for anything. <br>
          <i>Example: mount cat5/6 cable to joists.</i> <br>
          Infill: 20% <br>
@@ -153,16 +132,37 @@ Planter Plate I created for use with <a href="https://www.prusaprinters.org/prin
         </div>
 <!-- PRINT POST -->
     <button class="printacc"> Multi Hook Door Hanger </button>
-    <div class="printpanel"><p> <img src="images/3d/multihookdoorhanger02.png" width="auto" height="80" style="float:right;"/> <br>
+    <div class="printpanel"><p> <img src="images/3d/multihookdoorhanger02.png" width="auto" height="150" style="float:right;"/> <br>
          Over the door hook that allows multiple hanger items <br>
          Infill: 20% <br>
          Filament: PETG (for strength) <br>
     <a href="https://www.tinkercad.com/things/gsALLvtj8O6?sharecode=36PXpdynp9L3FFw1DxskvqLTdlGc_YmJhLhbvFw8oWg" target="_blank"><button class="menu2"> Tinkercad </button></a>
     </p>
     </div>
+    <!-- Games Table Section  -->
+  <br>
+  <h2>Games <i class="fas fa-gamepad"></i></h2>
+    <table>
+      <tr>
+        <th>Title</th>
+        <th>Description</th>
+        <th>OS/Requirements</th>
+      </tr>
+      <tr>
+        <td> TBD </td>
+        <td> TBD </td>
+        <td><i class="fab fa-linux"></i> (Linux)</td>
+      </tr>
+      <tr>
+        <td>Coming Soon</td>
+        <td>Quick Game Jam based in Pygame? We'll See...</td>
+        <td><i class="fab fa-raspberry-pi"></i> Raspberry Pi</td>
+      </tr>
+    </table>
 <!-- Utilities Table Section -->
   <br>
   <h2>Utilities <i class="fas fa-box-open"></i></h2>
+  <h4>files are zipped for convienece</h4><br>
   <table>
   <tr>
     <th> File </th>
