--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <li> - Updated downloads page </li>
       <li> - overall formatting improved</li>
       <li> - menu button redesign</li>
+      <li> - updated the shop + product pages</li>
       &gt; &gt; posted Feruary 2024 &lt; &lt;
     </ul>
 </p>
