--- a/shop.html
+++ b/shop.html
@@ -41,14 +41,15 @@
   <div class="main">
     <p>
       <h1>Shop</h1>
-      <h3 style="border: 1px solid #00ff00; width:80%;">A small selection of 3D printed products! All prices include delivery. </h3>
+      <h3 style="border: 1px solid #00ff00; max-width: 710px;">A small selection of 3D printed products! All prices include delivery. </h3>
     </p>
   </br>
     <p><h4 style="text-shadow: 2px 2px 4px #000000; color: orange; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4>
     </p>
   </br>
-  <p><div class="featuredproduct"><h2><u> [ Featured Product ] </u></h2><br>
-      <img src="images/3d/KeyHooks[JD]v02.png" height="150px" width="auto" />
+  <p><div class="featuredproduct"><h2 style="text-align: left;">Featured Product</h2><br>
+    <hr style="color:white;">
+      <img src="images/3d/KeyHooks[JD]v02.png" height="300px" width="auto" />
       <p><h2>Key Hooks (Wall Mounted)</h2></p>
       <p class="price">$5</p>
       <p><h5>Where are my keys?!<br>Hang them up! Here's a simple solution a 4 Hook key hanger, wall mount ready for a typical wood or drywall screw. (you could also just slap heavy duty double sided tape on the back and mount anywhere)</h5></p>
