--- a/shop/product1.html
+++ b/shop/product1.html
@@ -27,14 +27,15 @@
  </script>
 <!-- Start Visual-->
   <center><img src="../images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
-      <div class="navigation">
-        <!-- Force all links to use HTTPS incase navigation to here was insecure -->
-      <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><img src="images/phanicon-bw.svg"/></button></a>
-      <a href="https://www.phantominc.net/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
-      <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
-      <a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
-      <a href="https://www.phantominc.net/media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
-    </div>
+  <div class="navigation">
+    <!-- Force all links to use HTTPS incase navigation to here was insecure -->
+    <a href="index.html" alt="secure_yo_self"><button class="menu"><i class="fa-solid fa-house-chimney"></i></button></a>
+    <a href="support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
+    <a href="downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
+    <button class="pagehere"><i class="fas fa-shopping-cart"></i> Shop</button></a>
+    <a href="media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
+    <a href="contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
+  </div>
   </head>
  <body>
     <p>
@@ -47,7 +48,7 @@
     <br>
     <!-- Shop Time -->
     <center>
-        <div class="product"><img src="../images/3d/example.png" height="100px" width="150px" />
+        <div class="productpage"><img src="../images/3d/example.png" height="100px" width="150px" />
             <h2> JD's Square Planter Plate<h2 style="color:green">(Multicolor)</h2>
             <p class="price">$10</p>
             <p><h5>Its a planter plate! Goes along with the Planter print </h5><h4>Printed with PETG</h4></p>
