--- a/shop/product3.html
+++ b/shop/product3.html
@@ -27,14 +27,15 @@
  </script>
 <!-- Start Visual-->
   <center><img src="../images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
-      <div class="navigation">
-        <!-- Force all links to use HTTPS incase navigation to here was insecure -->
-      <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><img src="images/phanicon-bw.svg"/></button></a>
-      <a href="https://www.phantominc.net/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
-      <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
-      <a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
-      <a href="https://www.phantominc.net/media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
-    </div>
+  <div class="navigation">
+    <!-- Force all links to use HTTPS incase navigation to here was insecure -->
+    <a href="index.html" alt="secure_yo_self"><button class="menu"><i class="fa-solid fa-house-chimney"></i></button></a>
+    <a href="support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
+    <a href="downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
+    <button class="pagehere"><i class="fas fa-shopping-cart"></i> Shop</button></a>
+    <a href="media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
+    <a href="contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
+  </div>
   </head>
  <body>
     <p>
@@ -47,7 +48,7 @@
     <br>
     <!-- Shop Time -->
     <center>
-      <div class="product"><img src="images/3d/KeyHooks[JD]v02.png" height="150px" width="auto" />
+      <div class="productpage"><img src="../images/3d/KeyHooks[JD]v02.png" height="350px" width="auto" />
       <p><h2>Key Hooks (Wall Mounted)</h2></p>
       <p class="price">$5</p>
       <p><h5>Where are my keys?!<br>Hang them up! Here's a simple solution a 4 Hook key hanger, wall mount ready for a typical wood or drywall screw. (you could also just slap heavy duty double sided tape on the back and mount anywhere)</h5></p>
