foramtting on shop page

--- a/shop.html
+++ b/shop.html
@@ -50,7 +50,7 @@
   <p><div class="featuredproduct"><h2 style="text-align: left;">Featured Product</h2><br>
     <hr style="color:white;">
       <img src="images/3d/KeyHooks[JD]v02.png" height="300px" width="auto" />
-      <p><h2>Key Hooks (Wall Mounted)</h2></p>
+      <p><h2 style="border: 1px solid #00ff00; max-width: auto padding: 5px;">Key Hooks (Wall Mounted)</h2></p>
       <p class="price">$5</p>
       <p><h5>Where are my keys?!<br>Hang them up! Here's a simple solution a 4 Hook key hanger, wall mount ready for a typical wood or drywall screw. (you could also just slap heavy duty double sided tape on the back and mount anywhere)</h5></p>
       <p><a href="shop/product3.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
@@ -73,7 +73,7 @@
       <div class="product"><img src="images/3d/iphone12promax.png" height="150px" width="auto" />
         <h3>iPhone 12 Max Case </br> (Multicolor)</h3>
         <p class="price">$15</p>
-        <p><h5>iPhone 12 Pro Max rubber case </h5><h4>Printed with Overture TPU (95A) </br>or</br> SainSmart TPU (92A) filament.</h4></p>
+        <p><h5>iPhone 12 Pro Max rubber case </h5><h4>Printed with TPU / FLEX</h4></p>
         <p><h5 style="color:red">Limited Quanities Available!</h5></p>
         <p><h5 style="color:orange">Orange</h5><h5 style="text-shadow: 2px 2px 4px #000000;">Clear-ish</h5><h5 style="color:green;">Green</h5></p>
         <!--Put Paypal Button Here! --><p><a href="shop/product2.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
