--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <li> - overall formatting improved</li>
       <li> - menu button redesign</li>
       <li> - updated the shop + product pages</li>
-      &gt; &gt; posted Feruary 2024 &lt; &lt;
+      &gt; &gt; posted February 2024 &lt; &lt;
     </ul>
 </p>
 <br>
