--- a/updates.html
+++ b/updates.html
@@ -49,7 +49,7 @@
     <li> - Updated downloads page </li>
     <li> - overall formatting improved</li>
     <li> - menu button redesign</li>
-    &gt; &gt; posted Feruary 2024 &lt; &lt;
+    &gt; &gt; posted February 2024 &lt; &lt;
   </ul>
   <p>
     <h2>Update 5</h2>
