fixed image sizing on shop featured prod

--- a/shop.html
+++ b/shop.html
@@ -49,8 +49,8 @@
   </br>
   <p><div class="featuredproduct"><h2 style="text-align: left;">Featured Product</h2><br>
     <hr style="color:white;">
-      <img src="images/3d/KeyHooks[JD]v02.png" height="300px" width="auto" />
-      <p><h2 style="border: 1px solid #00ff00; max-width: auto padding: 5px;">Key Hooks (Wall Mounted)</h2></p>
+      <img src="images/3d/KeyHooks[JD]v02.png" max-height="300px" width="auto" />
+      <p><h2 style="border: 1px solid #00ff00; max-width:auto; padding: 5px;">Key Hooks (Wall Mounted)</h2></p>
       <p class="price">$5</p>
       <p><h5>Where are my keys?!<br>Hang them up! Here's a simple solution a 4 Hook key hanger, wall mount ready for a typical wood or drywall screw. (you could also just slap heavy duty double sided tape on the back and mount anywhere)</h5></p>
       <p><a href="shop/product3.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
