added sizing to stickers

--- a/shop.html
+++ b/shop.html
@@ -82,14 +82,16 @@
         <h3>Phantom Inc Stickers </br></h3>
         <p class="price">10 for $9</p>
         <p><h5>Free Shipping </h5><h4>Made and Shipped by Sticker Mule </br></h4></p>
-        <p><h5 style="color:white"> * Regular</h5></p>
+        <p><h5 style="color:white"> * Regular *</h5></p>
+        <p><h5>3 x 3 inches</h5></p>
         <!--Put Paypal Button Here! --><p><a href="https://www.stickermule.com/u/jeremysmai/item/11427837"><button class="productbtn"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
       </div>
       <div class="product"><img src="images/phantom_sticker_holo.png" height="150" width="150"/>
         <h3>Phantom Inc Stickers </br></h3>
         <p class="price">10 for $9</p>
         <p><h5>Free Shipping </h5><h4>Made and Shipped by Sticker Mule </br></h4></p>
-        <p><h5 style="text-shadow: 2px 2px 4px #000000;">* Holographic</h5></p>
+        <p><h5 style="text-shadow: 2px 2px 4px #000000;">* Holographic *</h5></p>
+        <p><h5>3 x 3 inches</h5></p>
         <!--Put Paypal Button Here! --><p><a href="https://www.stickermule.com/u/jeremysmai/item/11557838"><button class="productbtn"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
       </div>     
 </br>
