added links to other sites in contact

--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,10 @@
       <br>
       <a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i> Twitter </button></a>
       </p>
+
+      <p><h2>Other Sites</h2>
+      <a href="https://jnmconsulting.org" target="_blank"><button class="menu"><i class="fa-solid fa-link"></i> JNM Consulting </button></a>
+    </p>
 </div>
   <br>
 <center>Have discord? Get in contact NOW!</center>
