old school jnm startpage menu

--- a/startpage.html
+++ b/startpage.html
@@ -109,6 +109,11 @@
  }
 </script>
 </div>
+  <div class="smenu"><span> - JNM - </span>
+  <div class="smenu-content">
+  <button class="smenu"><a href="https://jnmconsulting.org/">JNM Consulting</a></button>
+  <button class="smenu"><a href="https://www.jnmsecurity.com/">JNM Security</a></button>
+  </div>
   </body>
 
   <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-bw.svg"/> version: 1.2 </footer>
