--- a/shop.html
+++ b/shop.html
@@ -32,10 +32,8 @@
   <div class="main">
     <p>
       <h1>Shop</h1>
+    </br>
       <h3 style="border: 1px solid #00ff00; max-width: 710px;">A small selection of 3D printed products! All prices include delivery. </h3>
-    </p>
-  </br>
-    <p><h4 style="text-shadow: 2px 2px 4px #000000; color: orange; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4>
     </p>
   </br>
   <p><div class="featuredproduct"><h2 style="text-align: left;">Featured Product</h2><br>
@@ -52,41 +50,40 @@
         <p class="price">$20</p>
         <p><h5>My first official print! Its a planter! </h5><h4>Printed with PETG</h4></p>
         <p><h5>Colors In Stock:<h5 style="color:black">Black</h5><h5 style="color:gray">Gray</h5><h5 style="color:white">White</h5></h5></p>
-        <!--Put Paypal Button Here! --><p><a href="shop/product0.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
+        <p><a href="shop/product0.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
       </div>
       <div class="product"><img src="images/3d/squareplanterplate01.png" height="150" width="auto"/>
         <h3> JD's Square Planter Plate<h3 style="color:green">(Multicolor)</h3>
         <p class="price">$10</p>
         <p><h5>Its a planter plate! Goes along with the Planter print </h5><h4>Printed with PETG</h4></p>
         <p><h5>Colors In Stock:<h5 style="color:black">Black</h5><h5 style="color:gray">Gray</h5><h5 style="color:white">White</h5></h5></p>
-        <!--Put Paypal Button Here! --><p><a href="shop/product1.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
+        <p><a href="shop/product1.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
       </div>
-      <div class="product"><img src="images/3d/iphone12promax.png" height="150px" width="auto" />
+      <!--div class="product"><img src="images/3d/iphone12promax.png" height="150px" width="auto" />
         <h3>iPhone 12 Max Case </br> (Multicolor)</h3>
         <p class="price">$15</p>
         <p><h5>iPhone 12 Pro Max rubber case </h5><h4>Printed with TPU / FLEX</h4></p>
         <p><h5 style="color:red">Limited Quanities Available!</h5></p>
         <p><h5 style="color:orange">Orange</h5><h5 style="text-shadow: 2px 2px 4px #000000;">Clear-ish</h5><h5 style="color:green;">Green</h5></p>
-        <!--Put Paypal Button Here! --><p><a href="shop/product2.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
-      </div>
+        <p><a href="shop/product2.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
+      </div-->
       <div class="product"><img src="images/phantom_sticker.png" height="150" width="150"/>
         <h3>Phantom Inc Stickers </br></h3>
         <p class="price">10 for $9</p>
         <p><h5>Free Shipping </h5><h4>Made and Shipped by Sticker Mule </br></h4></p>
         <p><h5 style="color:white"> * Regular *</h5></p>
         <p><h5>3 x 3 inches</h5></p>
-        <!--Put Paypal Button Here! --><p><a href="https://www.stickermule.com/u/jeremysmai/item/11427837"><button class="productbtn"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
+        <p><a href="https://www.stickermule.com/u/jeremysmai/item/11427837"><button class="productbtn"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
       </div>
       <div class="product"><img src="images/phantom_sticker_holo.png" height="150" width="150"/>
-        <h3>Phantom Inc Stickers </br></h3>
+        <h3>[HOLO] Phantom Inc Stickers </br></h3>
         <p class="price">10 for $9</p>
         <p><h5>Free Shipping </h5><h4>Made and Shipped by Sticker Mule </br></h4></p>
         <p><h5 style="text-shadow: 2px 2px 4px #000000;">* Holographic *</h5></p>
         <p><h5>3 x 3 inches</h5></p>
-        <!--Put Paypal Button Here! --><p><a href="https://www.stickermule.com/u/jeremysmai/item/11557838"><button class="productbtn"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
+        <p><a href="https://www.stickermule.com/u/jeremysmai/item/11557838"><button class="productbtn"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
       </div>     
 </br>
-  <p><h4 style="text-shadow: 2px 2px 4px #000000; color: orange; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4></p>
   </div>
  </body>
  <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2 </footer>
