fixed wording on homepage and a link on readme

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="main">
   <p>
     <h2>Hello and Welcome to Phantom Inc's Official Website!</h2>
-<h3>The one stop shop for<br> Device Repairs | Website Creation | 3D prints | and more...</h3>
+<h3>The one stop shop for<br> Device Repairs | Website Creation | IT Support | and more...</h3>
 <!--Here is the latest venture back into mostly HTML<br>Hope you enjoy!-->
   </p>
 <br>
