--- a/CDE/solar.html
+++ b/CDE/solar.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="auto">
+<html lang="en" data-bs-theme="dark">
   <head><script src="../assets/js/color-modes.js"></script>
 
     <meta charset="utf-8">
@@ -120,7 +120,7 @@
 
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
-        <div class="h-100 p-5 text-bg-dark rounded-3">
+        <div class="h-100 p-5 text-bg-dark border rounded-3">
           <h2>Illinois Branch</h2>
           <p>Using the button below you can launch into the Illinois branch of our Solar Projects</p>
           <button class="btn btn-outline-light" type="button">Click Here</button>
@@ -141,7 +141,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="h-100 p-5 text-bg-dark rounded-3">
+        <div class="h-100 p-5 text-bg-dark border rounded-3">
           <h2>Admin Portal</h2>
           <p>Launch into the matrix</p>
           <button class="btn btn-outline-warning" type="button">Login</button>
